--- a/reset_password.html
+++ b/reset_password.html
@@ -67,13 +67,13 @@
             margin-top: 15px;
         }
         .login-link a {
-            color: #218838;
+            color: #2A2A8B;
             text-decoration: none;
             font-weight: bold;
         }
         .login-link a:hover {
             text-decoration: underline;
-            color: black;
+            color: #000058;
         }
     </style>
 </head>
@@ -98,6 +98,7 @@
         </div>
     </div>
 
+    <!--js-->
     <script>
         function getQueryParams() {
             const params = {};
