--- a/license.html
+++ b/license.html
@@ -33,6 +33,10 @@
         }
         .btn-create {
             margin-left: auto;
+            color: black;
+        }
+        .btn-create:hover{
+color: white;
         }
         .navbar {
             background-color: #383838;
@@ -51,8 +55,8 @@
         <div class="search-container">
             <input type="text" id="search-input" placeholder="Search..." onkeyup="searchTable()">
             <select id="sort-select" onchange="sortTable()">
-                <option value="oldest_to_newest">Oldest to Newest</option>
-                <option value="newest_to_oldest">Newest to Oldest</option>
+                <option value="oldest_to_newest">Accending by expire date</option>
+                <option value="newest_to_oldest">Decending by expire date</option>
             </select>
             <a href="save_license.php" class="btn btn-primary btn-create">Create New License</a>
         </div>
@@ -65,7 +69,6 @@
                     <th>Contact</th>
                     <th>MAC Address</th>
                     <th>Edit</th>
-                    <th>Delete</th>
                 </tr>
             </thead>
             <tbody id="license-table-body">
@@ -113,22 +116,7 @@
             rows.forEach(row => tableBody.appendChild(row));
         }
 
-        function askDelete(id) {
-            if (confirm("Are you sure you want to delete this license?")) {
-                fetch(`delete_license.php?id=${id}`)
-                    .then(response => response.json())
-                    .then(result => {
-                        alert(result.message);
-                        if (result.status === "success") {
-                            location.reload(); 
-                        }
-                    })
-                    .catch(error => {
-                        alert("An error occurred while deleting. Please try again.");
-                        console.error('Error deleting license:', error);
-                    });
-            }
-        }
+        
 
         document.addEventListener('DOMContentLoaded', function() {
             fetch('license.php')
@@ -148,9 +136,7 @@
                             <td>
                                 <a href='update_license.php?license_key=${license.license_key}&company_name=${encodeURIComponent(license.company_name)}' class='btn btn-info btn-edit'>Edit</a>
                             </td>
-                            <td>
-                                <button type='button' class='btn btn-danger btn-delete' onclick='askDelete("${license.license_key}")'>Delete</button>
-                            </td>
+                           
                         `;
                         tableBody.appendChild(row);
                     });
